--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -52,11 +52,13 @@ jobs:
         with:
           path: ./build/libllama.so
           name: llama-bin-linux-${{ matrix.build }}-x64.so
+          overwrite: true
       - name: Upload Llava
         uses: actions/upload-artifact@v4
         with:
           path: ./build/examples/llava/libllava_shared.so
           name: llava-bin-linux-${{ matrix.build }}-x64.so
+          overwrite: true
 
   compile-windows:
     name: Compile (Windows)
@@ -93,12 +95,14 @@ jobs:
         with:
           path: .\build\bin\Release\llama.dll
           name: llama-bin-win-${{ matrix.build }}-x64.dll
+          overwrite: true
 
       - name: Upload Llava
         uses: actions/upload-artifact@v4
         with:
           path: .\build\bin\Release\llava_shared.dll
           name: llava-bin-win-${{ matrix.build }}-x64.dll
+          overwrite: true
 
   compile-clblast:
     name: Compile (clblast) - ${{ matrix.os }}
@@ -175,6 +179,7 @@ jobs:
             .\build\bin\Release\llama.dll
             .\build\bin\Release\clblast.dll
           name: llama-bin-win-clblast-x64.dll
+          overwrite: true
       - name: Upload llava artifacts (Windows)
         if: ${{ matrix.os == 'windows-latest' }}
         uses: actions/upload-artifact@v4
@@ -182,6 +187,7 @@ jobs:
           path: |
             .\build\bin\Release\llava_shared.dll
           name: llava-bin-win-clblast-x64.dll
+          overwrite: true
       - name: Upload artifacts (linux)
         if: ${{ matrix.os == 'ubuntu-22.04' }}
         uses: actions/upload-artifact@v4
@@ -190,6 +196,7 @@ jobs:
             ./build/libllama.so
             # ./build/libclblast.so
           name: llama-bin-linux-clblast-x64.so
+          overwrite: true
       - name: Upload llava artifacts (linux)
         if: ${{ matrix.os == 'ubuntu-22.04' }}
         uses: actions/upload-artifact@v4
@@ -197,6 +204,7 @@ jobs:
           path: |
             ./build/examples/llava/libllava_shared.so
           name: llava-bin-linux-clblast-x64.so
+          overwrite: true
 
           
   compile-cublas:
@@ -247,24 +255,28 @@ jobs:
         with:
           path: .\build\bin\Release\llama.dll
           name: llama-bin-win-cublas-cu${{ matrix.cuda }}-x64.dll
+          overwrite: true
       - name: Upload llava artifacts (Windows)
         if: ${{ matrix.os == 'windows-latest' }}
         uses: actions/upload-artifact@v4
         with:
           path: .\build\bin\Release\llava_shared.dll
           name: llava-bin-win-cublas-cu${{ matrix.cuda }}-x64.dll
+          overwrite: true
       - name: Upload artifacts (Linux)
         if: ${{ matrix.os == 'ubuntu-20.04' }}
         uses: actions/upload-artifact@v4
         with:
           path: ./build/libllama.so
           name: llama-bin-linux-cublas-cu${{ matrix.cuda }}-x64.so
+          overwrite: true
       - name: Upload llava artifacts (Linux)
         if: ${{ matrix.os == 'ubuntu-20.04' }}
         uses: actions/upload-artifact@v4
         with:
           path: ./build/examples/llava/libllava_shared.so
           name: llava-bin-linux-cublas-cu${{ matrix.cuda }}-x64.so
+          overwrite: true
  
     
   compile-macos:
@@ -300,17 +312,20 @@ jobs:
         with:
           path: ./build/libllama.dylib
           name: llama-bin-osx-${{ matrix.build }}.dylib
+          overwrite: true
       - name: Upload Llava
         uses: actions/upload-artifact@v4
         with:
           path: ./build/examples/llava/libllava_shared.dylib
           name: llava-bin-osx-${{ matrix.build }}.dylib
+          overwrite: true
       - name: Upload Metal
         if: ${{ matrix.build != 'x64' }}
         uses: actions/upload-artifact@v4
         with:
           path: ./build/bin/ggml-metal.metal
           name: ggml-metal.metal
+          overwrite: true
   
   build-deps:
     runs-on: ubuntu-latest
@@ -379,6 +394,7 @@ jobs:
         with:
           path: deps/
           name: deps
+          overwrite: true
 
       - name: Remove Artifacts
         uses: geekyeggo/delete-artifact@v2
