--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -118,6 +118,8 @@ jobs:
             uses: actions/checkout@v4
             with:
                 repository: ggerganov/llama.cpp
+                fetch-depth: 0
+                ref: '${{ github.event.inputs.llama_cpp_commit }}'
 
           - name: Download dependencies - Linux
             if: ${{ matrix.os == 'ubuntu-22.04' }}
@@ -140,7 +142,7 @@ jobs:
             run: |
                 mkdir build
                 cd build
-                cmake .. ${{ env.COMMON_DEFINE }} -DLLAMA_NATIVE=OFF -DLLAMA_BUILD_SERVER=ON -DLLAMA_VULKAN=ON -DBUILD_SHARED_LIBS=ON -DCMAKE_PREFIX_PATH="$env:RUNNER_TEMP/vulkan"
+                cmake .. ${{ env.COMMON_DEFINE }} -DLLAMA_VULKAN=ON
                 cmake --build . --config Release -j ${env:NUMBER_OF_PROCESSORS}
                 ls -R
           - name: Build
@@ -148,7 +150,7 @@ jobs:
             run: |
                 mkdir build
                 cd build
-                cmake .. ${{ env.COMMON_DEFINE }} -DLLAMA_NATIVE=OFF -DLLAMA_BUILD_SERVER=ON -DLLAMA_VULKAN=ON -DBUILD_SHARED_LIBS=ON
+                cmake .. ${{ env.COMMON_DEFINE }} -DLLAMA_VULKAN=ON
                 cmake --build . --config Release -j ${env:NUMBER_OF_PROCESSORS}
                 ls -R
           - name: Upload llama artifacts (Windows)
