--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -48,10 +48,10 @@ jobs:
           cd build
           cmake .. ${{ env.COMMON_DEFINE }} ${{ matrix.defines }}
           cmake --build . --config Release -j ${env:NUMBER_OF_PROCESSORS}
-          ls .
+          ls -R
       - uses: actions/upload-artifact@v4
         with:
-          path: ./build/bin/libllama.so
+          path: ./src/libllama.so
           name: llama-bin-linux-${{ matrix.build }}-x64.so
           if-no-files-found: error
       - name: Upload Llava
